--- a/src/components/Services/ServicesCard.css
+++ b/src/components/Services/ServicesCard.css
@@ -1,5 +1,7 @@
-
-.card1:hover{
-    background-image: 
-    linear-gradient( 65.9deg,rgba(177,36,224,1) 0%  rgb(165, 23, 212) 98.4%);
+.row-1:hover{
+    background-color: #9C5BF5;
+}
+.parent-container{
+    display: flex;
+    flex-direction: row;
 }
