--- a/src/components/Home/NavBar.css
+++ b/src/components/Home/NavBar.css
@@ -1,4 +1,10 @@
-@media screen and (max-width:768px){
+
+
+
+
+
+
+/* @media screen and (max-width:768px){
     .nav-bar{
         height: 50px;
         background-color: yellow;
@@ -6,4 +12,4 @@
     .menu{
         display: list-item;
     }
-}
+} */
