--- a/src/components/Home/LastCard.scss
+++ b/src/components/Home/LastCard.scss
@@ -35,7 +35,18 @@ h2{
 
 @media (max-width:700px){
     .Card{
-        width: 150%;
+        width: 80%;
+        height: 50vh;
     }
+    
+    .seconddiv{
+        display: grid;
+        
+    }
+    .card-Box{
+        height: 60vh;
+        margin-left: 10%;
+    }
+   
 
 }
