--- a/src/components/Home/NavBar.scss
+++ b/src/components/Home/NavBar.scss
@@ -58,7 +58,7 @@ font-size: $f-size;
 
   @media (max-width:900px) {
     .nav-bar{
-        height: 25vh;
+        height: 80vh;
     }
     .menu{
         display: none;
@@ -68,9 +68,13 @@ font-size: $f-size;
     }
     .cart-btn{
         font-size: 20px;
-        width:60px;
-        height: 5%;
-        margin-right: 4%;
+        width:55px;
+        height: 3%;
+        margin-bottom: 90%;
+        position: absolute;
+        top: -50px;
+        left: -80px;
+        
     }
     .social-icons{
         font-size: 10px;
@@ -100,5 +104,11 @@ font-size: $f-size;
     }
     .petopia{
         font-size: 18px;
+    }
+    .logo-btn{
+        display: grid ;
+    }
+    .social-div{
+        width: 110.4%;
     }
   }
