--- a/src/components/Home/images.scss
+++ b/src/components/Home/images.scss
@@ -24,14 +24,17 @@ $pos: absolute;
 }
 @media (max-width:700px) {
   .img-2{
-    width: 55.5%;
-    height:650px;
-    left: 175px;
+    position: absolute;
+    left: 100px;
+    width: 85%;
+    top: 31px;
+    height: 570px;
   }
   .dog{
-    left: 210px;
-    top:90px;
-    height:330px ;
-    width: 210px;
+    position: absolute;
+    left: 80px;
+    top: 20px;
+    height: 600px;
+    width:340px ;
   }
 }
