--- a/src/components/Services/LastCards.scss
+++ b/src/components/Services/LastCards.scss
@@ -106,7 +106,8 @@ $mt:20%;
         width: 150px;
     }
     .cardno1{
-        width: 100%;
+        width: 86%;
+        height: 100%;
 
     }
     .card2{
@@ -124,5 +125,12 @@ $mt:20%;
     }
     .heading1{
         margin-left: 8%;
+    }
+    .image1{
+        transform: translateX(15%);
+     
+    }
+    .image2{
+        transform: translateX(15%)
     }
 }
