--- a/src/components/Services/ServicesCard.scss
+++ b/src/components/Services/ServicesCard.scss
@@ -1,6 +1,6 @@
 $color:#9C5BF5;
 $align:center;
-$height:150vh;
+$height:160vh;
 $padd:7%;
 
 @mixin border{
@@ -37,10 +37,11 @@ $padd:7%;
     .parent-container{
         
         display: grid !important;
-        
+        margin-left: 15%;
     }
     .services-box{
-        height: 300vh;
+        height: 320vh;
+        
     }
     .serv-cards{
         width: 250%;
