--- a/src/components/Shop/ShopProducts.scss
+++ b/src/components/Shop/ShopProducts.scss
@@ -26,9 +26,19 @@ $ml-heading3:10%;
 
 @media (max-width:700px) {
     .shop-product-box{
-        height: 300vh;
+        height: 340vh;
     }
     .parent-container{
         display: grid !important;
+    }
+    .heading3{
+        position: absolute;
+        top:49.8%;
+        left: 10%;
+    }
+    .heading2{
+        position: absolute;
+        top:44%;
+        left: 20%;
     }
 }
